fix(chatty): Spacing on comments was weird in some spots.

--- a/src/main/comments/comments.css
+++ b/src/main/comments/comments.css
@@ -3,6 +3,7 @@
     background-color: #121212;
     border: 1px solid #656565;
     padding: 0 0 25px 0;
+    margin-bottom: 2px;
     position: relative;
 }
 
