--- a/src/main/comments/truncate.css
+++ b/src/main/comments/truncate.css
@@ -3,7 +3,7 @@
     font-size: 12px;
     font-weight: bold;
     padding: 0;
-    margin: 0 0 0 8px;
+    margin: 0 0 -3px 8px;
     position: relative;
     top: 0;
     z-index: 900;
